cluster/apps/filebrowser/filebrowser-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: apps
spec:
  selector:
    app: filebrowser
  ports:
    - name: http
      port: 80
      targetPort: 80
